# nexoratrix-app

./: .gitignore  PROJECT_OVERVIEW.md  Procfile  README.md  database.py  main.py  nixpacks.toml  package.json  pyproject.toml  railway.json  railway_deployment.py  requirements.txt  ملخص مشروع NexoraTrix التقني - Copy.docx
ai_core/: advanced_features.py  autonomous_programmer.py  web_interface.py
database/: __init__.py  db.py
models/: __init__.py  client.py  client_model.py
modules/: content_studio_manifest.yaml  performance_monitor_manifest.yaml  sentiment_analyzer_manifest.yaml  social_sync_manifest.yaml
nexoratrix-app/: README.md  requirements.txt
nexoratrix-app/app/: database.py  main.py  models.py
nexoratrix-app/app/routes/: __init__.py  clients.py  dashboard.py  modules.py  settings.py
nexoratrix-app/app/templates/: about.html  client_details.html  contact.html  content_studio.html  dashboard.html  edit_client.html  help.html  index.html  logout.html  modules.html  new_client.html  performance_monitor.html  roadmap.html  sentiment_analyzer.html  settings.html  social_sync.html  stats.html
nexoratrix-app/static/: style.css
nexoratrix-app/tests/: test_main.py
routers/: clients.py  dashboard.py  modules.py
static/: custom.css  style.css
static/css/: style.css
templates/: about.html  ai_programmer_dashboard.html  ai_programmer_home.html  client_details.html  clients.html  contact.html  content_studio.html  dashboard.html  edit_client.html  help.html  index.html  logout.html  modules.html  new_client.html  performance_monitor.html  roadmap.html  sentiment_analyzer.html  settings.html  social_sync.html  stats.html
tests/: __init__.py  test_main.py  test_models.py
